Add aggregation summary for arch and family
